[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/pipe/pipe_red.png" type="Texture" id=1]
[ext_resource path="res://scripts/pipe.gd" type="Script" id=2]
[ext_resource path="res://scenes/sfx.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 68 )

[node name="Pipe" type="Node2D"]
script = ExtResource( 2 )
walk_speed = 180
sfx_scene = ExtResource( 3 )
pipe_texture = [ "res://assets/pipe/pipe_green.png", "res://assets/pipe/pipe_red.png" ]

[node name="TopPipe" type="StaticBody2D" parent="."]
scale = Vector2( 1, -1 )

[node name="Texture" type="Sprite" parent="TopPipe"]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="TopPipe"]
visible = false
polygon = PoolVector2Array( 26, -160, -26, -160, -26, -136, -24, -136, -24, 160, 24, 160, 24, -136, 26, -136 )

[node name="BottomPipe" type="StaticBody2D" parent="."]
position = Vector2( 0, 456 )

[node name="Texture" type="Sprite" parent="BottomPipe"]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="BottomPipe"]
visible = false
polygon = PoolVector2Array( 26, -160, -26, -160, -26, -136, -24, -136, -24, 160, 24, 160, 24, -136, 26, -136 )

[node name="Notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.43051e-06, 228 )
scale = Vector2( 2.4, 38.8 )

[node name="ScoreArea" type="Area2D" parent="."]
position = Vector2( 16, 228 )

[node name="Collision" type="CollisionShape2D" parent="ScoreArea"]
shape = SubResource( 1 )

[connection signal="screen_exited" from="Notifier" to="." method="on_screen_exited"]
[connection signal="body_exited" from="ScoreArea" to="." method="on_body_exited"]
